# linkedIn-post-generator

./: README.md  few_shot.py  llm_helper.py  main.py  post_generator.py  preprocess.py  pyproject.toml  requirements.txt
data/: embeddings_cache.pkl  expanded_posts.json  prerocessed_post.json
