[project]
name = "linkedin-post-generation-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
